# iiotGateway

./: .clang-format  .mxproject  CMakeLists-old.txt  CMakeLists.txt  E5_Borad_Test.code-workspace  E5_Borad_Test.ioc  Leesons.txt  Makefile  README.md  ToDo.txt  clangify  cubeMX_CodeGen_Postrun.py  output.html  runPostGenScript.bat
Core/Inc/: FreeRTOSConfig.h  UartRingbuffer_multi.h  adc_if.h  filter.h  index_html.h  iwdg.h  main.h  platform.h  ringBuffer.h  stm32_lpm_if.h  stm32wlxx_hal_conf.h  stm32wlxx_it.h  stm32wlxx_nucleo_conf.h  subghz.h  sys_app.h  sys_conf.h  sys_debug.h  system.h  tim.h  timer_if.h  uartRingBufDMA.h  usart.h  usart_if.h  user_gsm.h  user_mqttFunctions.h  user_system.h  user_wifi.h  utilities_conf.h  utilities_def.h
Core/Src/: UartRingbuffer_multi.c  adc.c  adc_if.c  app_freertos.c  dma.c  filter.c  gpio.c  index.html  index_html.c  iwdg.c  main.c  ringBuffer.c  rtc.c  stm32_lpm_if.c  stm32wlxx_hal_msp.c  stm32wlxx_it.c  subghz.c  subghz_phy_app.c  sys_app.c  sys_debug.c  syscalls.c  system.c  system_stm32wlxx.c  tim.c  timer_if.c  uartRingBufDMA.c  usart.c  usart_if.c  user_gsm.c  user_mqttFunctions.c  user_system.c  user_wifi.c
Drivers/BSP/: stm32wlxx_LoRa_E5_conf.h  stm32wlxx_LoRa_E5_conf_template.h  stm32wlxx_nucleo.c  stm32wlxx_nucleo.h  stm32wlxx_nucleo_radio.c  stm32wlxx_nucleo_radio.h
Drivers/CMSIS/Core/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_version.h  core_armv8mbl.h  core_cm0plus.h  core_cm1.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h
Drivers/CMSIS/Core/Template/ARMv8-M/: main_s.c  tz_context.c
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/DspLibTest_FVP_A5/: main.c
Drivers/CMSIS/DSP/Include/: arm_common_tables.h  arm_math.h
Drivers/CMSIS/DSP/Source/BasicMathFunctions/: arm_abs_f32.c  arm_abs_q15.c  arm_abs_q31.c  arm_abs_q7.c  arm_add_f32.c  arm_add_q15.c  arm_add_q31.c  arm_add_q7.c  arm_dot_prod_f32.c  arm_dot_prod_q15.c  arm_dot_prod_q31.c  arm_dot_prod_q7.c  arm_mult_f32.c  arm_mult_q15.c  arm_mult_q31.c  arm_mult_q7.c  arm_negate_f32.c  arm_negate_q15.c  arm_negate_q31.c  arm_negate_q7.c  arm_offset_f32.c  arm_offset_q15.c  arm_offset_q31.c  arm_offset_q7.c  arm_scale_f32.c  arm_scale_q15.c  arm_scale_q31.c  arm_scale_q7.c  arm_shift_q15.c  arm_shift_q31.c  arm_shift_q7.c  arm_sub_f32.c  arm_sub_q15.c  arm_sub_q31.c  arm_sub_q7.c
Drivers/CMSIS/DSP/Source/CommonTables/: arm_common_tables.c  arm_const_structs.c
Drivers/CMSIS/DSP/Source/ComplexMathFunctions/: arm_cmplx_conj_f32.c  arm_cmplx_conj_q15.c  arm_cmplx_conj_q31.c  arm_cmplx_dot_prod_f32.c  arm_cmplx_dot_prod_q15.c  arm_cmplx_dot_prod_q31.c  arm_cmplx_mag_f32.c  arm_cmplx_mag_q15.c  arm_cmplx_mag_q31.c  arm_cmplx_mag_squared_f32.c  arm_cmplx_mag_squared_q15.c  (+7 more)
Drivers/CMSIS/Include/: cmsis_armclang_ltm.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm7.h  core_sc000.h  mpu_armv8.h
Drivers/CMSIS/NN/Include/: arm_nn_tables.h  arm_nnfunctions.h  arm_nnsupportfunctions.h
Drivers/CMSIS/RTOS/Template/: cmsis_os.h
Drivers/CMSIS/RTOS2/Include/: cmsis_os2.h  os_tick.h
Drivers/CMSIS/RTOS2/Source/: os_systick.c  os_tick_gtim.c  os_tick_ptim.c
Drivers/CMSIS/RTOS2/Template/: cmsis_os.h  cmsis_os1.c
Drivers/STM32WLxx_HAL_Driver/Inc/: stm32_assert_template.h  stm32wlxx_hal.h  stm32wlxx_hal_adc.h  stm32wlxx_hal_adc_ex.h  stm32wlxx_hal_comp.h  stm32wlxx_hal_conf_template.h  stm32wlxx_hal_cortex.h  stm32wlxx_hal_crc.h  stm32wlxx_hal_crc_ex.h  stm32wlxx_hal_cryp.h  stm32wlxx_hal_cryp_ex.h  stm32wlxx_hal_dac.h  stm32wlxx_hal_dac_ex.h  stm32wlxx_hal_def.h  stm32wlxx_hal_dma.h  stm32wlxx_hal_dma_ex.h  stm32wlxx_hal_exti.h  stm32wlxx_hal_flash.h  stm32wlxx_hal_flash_ex.h  stm32wlxx_hal_gpio.h  stm32wlxx_hal_gpio_ex.h  stm32wlxx_hal_gtzc.h  stm32wlxx_hal_hsem.h  stm32wlxx_hal_i2c.h  stm32wlxx_hal_i2c_ex.h  stm32wlxx_hal_i2s.h  stm32wlxx_hal_ipcc.h  stm32wlxx_hal_irda.h  stm32wlxx_hal_irda_ex.h  stm32wlxx_hal_iwdg.h  stm32wlxx_hal_lptim.h  stm32wlxx_hal_pka.h  stm32wlxx_hal_pwr.h  stm32wlxx_hal_pwr_ex.h  stm32wlxx_hal_rcc.h  stm32wlxx_hal_rcc_ex.h  stm32wlxx_hal_rng.h  stm32wlxx_hal_rng_ex.h  stm32wlxx_hal_rtc.h  stm32wlxx_hal_rtc_ex.h  (+41 more)
Drivers/STM32WLxx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
Drivers/STM32WLxx_HAL_Driver/Src/: stm32wlxx_hal.c  stm32wlxx_hal_adc.c  stm32wlxx_hal_adc_ex.c  stm32wlxx_hal_comp.c  stm32wlxx_hal_cortex.c  stm32wlxx_hal_crc.c  stm32wlxx_hal_crc_ex.c  stm32wlxx_hal_cryp.c  stm32wlxx_hal_cryp_ex.c  stm32wlxx_hal_dac.c  stm32wlxx_hal_dac_ex.c  stm32wlxx_hal_dma.c  stm32wlxx_hal_dma_ex.c  stm32wlxx_hal_exti.c  stm32wlxx_hal_flash.c  stm32wlxx_hal_flash_ex.c  stm32wlxx_hal_gpio.c  stm32wlxx_hal_gtzc.c  stm32wlxx_hal_hsem.c  stm32wlxx_hal_i2c.c  stm32wlxx_hal_i2c_ex.c  stm32wlxx_hal_i2s.c  stm32wlxx_hal_ipcc.c  stm32wlxx_hal_irda.c  stm32wlxx_hal_iwdg.c  stm32wlxx_hal_lptim.c  stm32wlxx_hal_msp_template.c  stm32wlxx_hal_pka.c  stm32wlxx_hal_pwr.c  stm32wlxx_hal_pwr_ex.c  stm32wlxx_hal_rcc.c  stm32wlxx_hal_rcc_ex.c  stm32wlxx_hal_rng.c  stm32wlxx_hal_rng_ex.c  stm32wlxx_hal_rtc.c  stm32wlxx_hal_rtc_ex.c  stm32wlxx_hal_smartcard.c  stm32wlxx_hal_smartcard_ex.c  stm32wlxx_hal_smbus.c  stm32wlxx_hal_smbus_ex.c  (+32 more)
SubGHz_Phy/App/: app_subghz_phy.c  app_subghz_phy.h  app_version.h  subghz_phy_app.c  subghz_phy_app.h
Utilities/lpm/tiny_lpm/: stm32_lpm.c  stm32_lpm.h  stm32_lpm_if_template.c  stm32_lpm_if_template.h
Utilities/misc/: stm32_mem.c  stm32_mem.h  stm32_systime.c  stm32_systime.h  stm32_systime_if_template.c  stm32_systime_if_template.h  stm32_tiny_sscanf.c  stm32_tiny_sscanf.h  stm32_tiny_vsnprintf.c  stm32_tiny_vsnprintf.h
Utilities/sequencer/: stm32_seq.c  stm32_seq.h
Utilities/timer/: stm32_timer.c  stm32_timer.h  stm32_timer_if_template.c  stm32_timer_if_template.h
Utilities/trace/adv_trace/: stm32_adv_trace.c  stm32_adv_trace.h  stm32_adv_trace_if_template.c  stm32_adv_trace_if_template.h
tests/: CMakeLists.txt  stub_user_system.c  test_user_mqttFunctions.c  user_system.h
(+469 files in other folders)
